[gd_scene load_steps=27 format=3 uid="uid://djxk8n3rsx1kv"]

[ext_resource type="Texture2D" uid="uid://c6lfnh0fxs0tl" path="res://art/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="1_adxyk"]
[ext_resource type="Script" path="res://script/player.gd" id="1_hg5gl"]
[ext_resource type="PackedScene" uid="uid://d0imnb7pkehb4" path="res://components/health_component.tscn" id="3_7q4cu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a3brn"]
atlas = ExtResource("1_adxyk")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrexd"]
atlas = ExtResource("1_adxyk")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkllh"]
atlas = ExtResource("1_adxyk")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtxvl"]
atlas = ExtResource("1_adxyk")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lnav"]
atlas = ExtResource("1_adxyk")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv00a"]
atlas = ExtResource("1_adxyk")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l28lh"]
atlas = ExtResource("1_adxyk")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f58x"]
atlas = ExtResource("1_adxyk")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt81g"]
atlas = ExtResource("1_adxyk")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_268b2"]
atlas = ExtResource("1_adxyk")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_05dfy"]
atlas = ExtResource("1_adxyk")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nip01"]
atlas = ExtResource("1_adxyk")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynsk4"]
atlas = ExtResource("1_adxyk")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bygi"]
atlas = ExtResource("1_adxyk")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0nh6"]
atlas = ExtResource("1_adxyk")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_30602"]
atlas = ExtResource("1_adxyk")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_th54d"]
atlas = ExtResource("1_adxyk")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pnfp"]
atlas = ExtResource("1_adxyk")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_01jow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3brn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrexd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkllh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtxvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lnav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv00a")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l28lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f58x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt81g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_268b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05dfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nip01")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynsk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bygi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0nh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30602")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th54d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pnfp")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8271u"]
radius = 17.0
height = 62.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0x3rp"]
size = Vector2(74, 117)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nugmj"]
bg_color = Color(0.238997, 0.60884, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxlpa"]
bg_color = Color(0, 0.309804, 0.960784, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hg5gl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_01jow")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_8271u")

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2(54, -15.5)
shape = SubResource("RectangleShape2D_0x3rp")
debug_color = Color(0.891105, 0.227636, 0.583872, 0.42)

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("progress_bar") instance=ExtResource("3_7q4cu")]
progress_bar = NodePath("../../ProgressBar")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -46.0
offset_top = -101.0
offset_right = 45.0
offset_bottom = -86.0
theme_override_styles/background = SubResource("StyleBoxFlat_nugmj")
theme_override_styles/fill = SubResource("StyleBoxFlat_nxlpa")
value = 50.0
show_percentage = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_area_attack_body_exited"]
